  attribute on the entity-facade element
- Added ADMIN_PASSWORD permission for administrative password change
  (in UserServices.update#Password service)
- Added UserServices.enable#UserAccount service to enable disabled account
- EntityDataWriter now supports export with a entity master definition
  name, applied only to entities exported that have a master def with the
  given master name

Bug Fixes

- Fixed issue with REST and other JSON request body parameters where single
  entry lists were unwrapped to just the entry by the canonicalization code
- Fixed NPE in EntityFind.oneMaster() when the master value isn't found,
  now returns null with no error; fixes moqui-runtime issue #18
- Fixed ElFinder rm (moqui-runtime GitHub issue #23), response for upload
- Screen sub-content directories treated as not found so directory entries
  not listed (GitHub moqui-framework issue #47)
- In entity cache auto clear for list of view-entity fixed mapping of
  member entity fields to view entity alias, and partial match when only
  some view entity fields are on a member entity
- Cache clear fix for view-entity list cache fixes issue where adding a
  permission required manual cache clear or restart for permission to apply

===========================================================================
Release 1.6.2 - 26 Mar 2016
===========================================================================

Moqui Framework 1.6.2 is a minor new feature and bug fix release.

This release is all about performance improvements, bug fixes, library
updates and cleanups. There are a number of minor new features like better
multi-tenant handling (and security), optionally loading data on start if
the DB is empty, more flexible handling of runtime Moqui Conf XML location,
database support and transaction management, and so on.

Non Backward Compatible Changes

- Entity field types are somewhat more strict for database operations; this