@@ -74,6 +74,8 @@ New Features
 - EntityDataWriter now supports export with a entity master definition
   name, applied only to entities exported that have a master def with the
   given master name
+- Added support for error screens rendered depending on type of error,
+  configured in the webapp.error-screen element in the Moqui Conf XML file
 
 Bug Fixes
 
